--- a/src/global-styles/colors.scss
+++ b/src/global-styles/colors.scss
@@ -1,6 +1,7 @@
 // background colors 
 $dark-blue: #212C4F; 
-$light-grey: #F0F3F5; 
+$super-dark-blue: #1b233f;
+$light-gray: #F0F3F5; 
 
 // Text Colors
 $dark-green: #205284;
